# mathx_repl

./: .editorconfig  .gitignore  BUGS.md  CMakeLists.txt  Makefile  README.md  setup.sh  test.mx
include/: repl.h
src/: CMakeLists.txt  assignment.cpp  error.cpp  evaluate.cpp  function_map.cpp  main.cpp  parser.cpp  process_file.cpp  run_repl.cpp  tools.cpp  variable_map.cpp
